# licheervnano

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.en.md  README.md  README.zh.md
docs/: adc_setup.md  audio_capture_hw_test.md  audio_setup.md  board_layout.md  expand_rootfs.md  gpio_setup.md  i2c_setup.md  led_setup.md  rtc_setup.md  sg2002_pin_map.md  sipeed_resources.md  thermal_setup.md  tpu_benchmark_methodology.md  tpu_setup.md  tpu_sg2002.md  uart_setup.md  usb_setup.md  watchdog_setup.md  wifi_setup.md
docs/datasheets/: README.md
extlinux/: extlinux.conf
manifest/: sources.mk
overlay/cvitek-tpu-vendor/: tpu_kernel_compat.h
overlay/cvitek-tpu-vendor/uapi/: cvi_tpu_ioctl.h
patches/aic8800-vendor/: 0001-compat-kernel-6.18.patch  0002-cfg80211-ops-kernel-6.18.patch  0003-btlpm-kernel-6.18.patch
patches/cvitek-tpu-vendor/: 0001-forward-port-soph_tpu-kernel-6.18.patch
patches/fsbl/: 0001-mainline-toolchain.patch  0002-user-led-off-blue.patch
patches/linux/: 0001-licheerv-nano-dts-b-e-w-extensions.patch  0002-cv180x-fix-ethernet-phy-mode.patch  0003-cv1800b-ephy-init-driver.patch  0004-licheerv-nano-i2c.patch  0005-licheerv-nano-uart.patch  0007-licheerv-nano-usb-dwc2.patch  0008-licheerv-nano-audio-dt-nodes.patch  0009-sound-soc-sophgo-cv1800b-audio-drivers.patch  0010-licheerv-nano-audio-activate.patch  0011-dmac-cv1800b-backport-and-activate.patch  0012-licheerv-nano-spk-en.patch  0013-licheerv-nano-spk-en-stream-gating.patch  0015-cv1800b-adc-soft-reset-on-capture.patch  0016-cv1800b-i2s-capture-clock-slave.patch  0017-licheerv-nano-tpu.patch  0018-licheerv-nano-user-led.patch  0019-licheerv-nano-watchdog.patch  0020-licheerv-nano-thermal.patch  0021-licheerv-nano-pinmux-i2c-uart-dts.patch  0022-rtc-cv1800-32k-osc-calibration.patch
patches/uboot/: 0001-licheerv_nano-fix-extlinux-load-addresses.patch  0002-licheerv_nano-ethaddr-from-efuse-ftsn.patch  0003-licheerv_nano-neutral-model-string.patch
scripts/: audio-mic-diag.sh  refetch.sh  regenerate-ssh-host-keys.service  setup-usb-gadget.sh  tier1-audio-capture-diag.sh  usb-gadget.service
src/zlib/: CMakeLists.txt  README-cmake.md  gzwrite.c  zlib.h  zlibConfig.cmake.in
src/zlib/.github/workflows/: c-std.yml  contribs.yml  others.yml
src/zlib/contrib/: CMakeLists.txt
src/zlib/contrib/ada/: CMakeLists.txt
src/zlib/contrib/ada/cmake/: binder_helper.cmake  exe_link_helper.cmake
src/zlib/contrib/ada/cmake/Modules/: CMakeADAInformation.cmake
src/zlib/contrib/ada/test/: CMakeLists.txt
src/zlib/contrib/blast/: CMakeLists.txt  blastConfig.cmake.in
src/zlib/contrib/blast/test/: CMakeLists.txt
src/zlib/contrib/delphi/: ZLib.pas
src/zlib/contrib/dotzlib/DotZLib/: UnitTests.cs
src/zlib/contrib/gcc_gvmat64/: CMakeLists.txt
src/zlib/contrib/infback9/: inftree9.c
src/zlib/contrib/iostream3/: CMakeLists.txt  iostream3Config.cmake.in
src/zlib/contrib/iostream3/test/: CMakeLists.txt
src/zlib/contrib/minizip/: CMakeLists.txt  Makefile.am  configure.ac  minizipConfig.cmake.in
src/zlib/contrib/minizip/test/: CMakeLists.txt  find_package_test.cmake.in
src/zlib/contrib/nuget/: nuget.csproj
src/zlib/contrib/pascal/: zlibpas.pas
src/zlib/contrib/puff/: CMakeLists.txt  puffConfig.cmake.in
src/zlib/contrib/puff/test/: CMakeLists.txt
src/zlib/contrib/testzlib/: CMakeLists.txt
src/zlib/contrib/zlib1-dll/: CMakeLists.txt  zlib1.rc  zlib1dllConfig.cmake.in  zlibwapi.rc
src/zlib/contrib/zlib1-dll/test/: CMakeLists.txt  add_subdirectory_exclude_test.cmake.in  add_subdirectory_test.cmake.in  find_package_test.cmake.in
src/zlib/test/: CMakeLists.txt  add_subdirectory_exclude_test.cmake.in  add_subdirectory_test.cmake.in  find_package_no_components_test.cmake.in  find_package_test.cmake.in  find_package_wrong_components_test.cmake.in
src/zlib/win32/: zlib-cmake.rc
tools/cviruntime/: 0001-dma-heap-getpaddr.patch  README.md  build.sh  cast_bench.cpp  kit_README.txt  make_kit.sh  run_900.sh  set_tpu_clk.py  toolchain-debian-riscv64.cmake  tpu_bench.cpp  tpu_maxtops.sh  tpu_smoke.cpp  tpu_soak.cpp  tpu_yolo.cpp
tools/cviruntime/io8/: README.md  build_ultraface.sh
tools/cviruntime/saturating/: README.md  compile_all.sh  compile_io8.sh  gen_models.py
tools/cviruntime/yolo/: README.md  build_yolov5s.sh  export_yolov5s.sh
tools/tpu-mlir/: Containerfile  cvimodel_norm.py  etalon_v1.28.1_manifest.txt  gen_etalon.sh  run.sh
